// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`combine-assets\` > should produce expected output > Asset file 'assets.php' should match snapshot 1`] = `
"<?php return array(
	'fileA.mjs' => array(
		'dependencies' => array(
			'@wordpress/blob',
			'lodash'
		),
		'version' => '270cb9e2d17f391e9270',
		'type' => 'module'
	),
	'fileB.mjs' => array(
		'dependencies' => array(
			'@wordpress/token-list'
		),
		'version' => '4cf36c37afb98cbb1f86',
		'type' => 'module'
	)
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`combine-assets\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "@wordpress/token-list",
    "userRequest": "@wordpress/token-list",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-dependency-graph\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/interactivity'
	),
	'version' => '3432e19e5eaf6d6f4b77',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-dependency-graph\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "module",
    "request": "@wordpress/interactivity",
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-dynamic-dependency-graph\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		array(
			'id' => '@wordpress/interactivity',
			'import' => 'dynamic'
		)
	),
	'version' => 'da8027509a599765e92e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-dynamic-dependency-graph\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "module",
    "request": "@wordpress/interactivity",
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-external-deps\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		array(
			'id' => '@wordpress/interactivity',
			'import' => 'dynamic'
		)
	),
	'version' => '65d060225529cfdd95f5',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`cyclic-external-deps\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "module",
    "request": "@wordpress/interactivity",
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`dynamic-import\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		array(
			'id' => '@wordpress/blob',
			'import' => 'dynamic'
		)
	),
	'version' => '7d8b118ac6242e7f308e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`dynamic-import\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`error\` > should produce expected output 1`] = `
"ERROR in ./index.js 1:0-23
Module not found: Error: Attempted to use WordPress script in a module: jquery, which is not supported yet.

ERROR in ./index.js 3:23-55
Module not found: Error: Attempted to use WordPress script in a module: @wordpress/api-fetch, which is not supported yet.
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`function-output-filename\` > should produce expected output > Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => 'b68363f122fe0a26183e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`function-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`has-extension-suffix\` > should produce expected output > Asset file 'index.min.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => 'fd4b8dcc8741c1523219',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`has-extension-suffix\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`module-renames\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'renamed--@my/module',
		'renamed--other-module'
	),
	'version' => '79d3c39076be7f6df4ea',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`module-renames\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "renamed--@my/module",
    "userRequest": "@my/module",
  },
  {
    "externalType": "import",
    "request": "renamed--other-module",
    "userRequest": "other-module",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`nested-dynamic-import\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		array(
			'id' => '@wordpress/interactivity',
			'import' => 'dynamic'
		)
	),
	'version' => '67bfe5b9e28926bb7d9f',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`nested-dynamic-import\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "module",
    "request": "@wordpress/interactivity",
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`no-default\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => 'e92a9548b4a6bd2acd81',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`no-default\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`no-deps\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => '47abc9f11d44c8d2ea89',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`no-deps\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`option-function-output-filename\` > should produce expected output > Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => 'b68363f122fe0a26183e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`option-function-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`option-output-filename\` > should produce expected output > Asset file 'main-foo.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => 'b68363f122fe0a26183e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`option-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`output-format-json\` > should produce expected output > Asset file 'main.asset.json' should match snapshot 1`] = `
"{
	"dependencies": [
		"lodash"
	],
	"version": "11156aba3b369605e939",
	"type": "module"
}"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`output-format-json\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`overrides\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'@wordpress/url',
		'rxjs',
		'rxjs/operators'
	),
	'version' => 'af74b6f7d8a3f114b5b3',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`overrides\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "@wordpress/url",
    "userRequest": "@wordpress/url",
  },
  {
    "externalType": "import",
    "request": "rxjs",
    "userRequest": "rxjs",
  },
  {
    "externalType": "import",
    "request": "rxjs/operators",
    "userRequest": "rxjs/operators",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`polyfill-magic-comment\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-polyfill'
	),
	'version' => 'ce3c6b76208e3e42fe21',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`polyfill-magic-comment\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`polyfill-magic-comment-minified\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-polyfill'
	),
	'version' => '31d6cfe0d16ae931b73c',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`polyfill-magic-comment-minified\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'a.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob'
	),
	'version' => '0b4be29a9a428b9e8608',
	'type' => 'module',
	'handle' => 'runtime-chunk-single-modules-a'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'b.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => '95c637f4ad0885697262',
	'type' => 'module',
	'handle' => 'runtime-chunk-single-modules-b'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'runtime.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => '9c63db42c1fe56ddaf1e',
	'type' => 'module',
	'handle' => 'runtime-chunk-single-modules-runtime'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`runtime-chunk-single\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`style-cache-group\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob'
	),
	'version' => '8d9f598be79e102d0648',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`style-cache-group\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`style-imports\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => '825b69f70b86760c73a3',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`style-imports\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => 'b68363f122fe0a26183e',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress-interactivity\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		array(
			'id' => '@wordpress/interactivity',
			'import' => 'dynamic'
		)
	),
	'version' => '995805497b878a0197d9',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress-interactivity\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "module",
    "request": "@wordpress/interactivity",
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress-require\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'@wordpress/blob',
		'lodash'
	),
	'version' => '9dcb7bb56f3fd06c5087',
	'type' => 'module'
);
"
`;

exports[`DependencyExtractionWebpackPlugin modules > Webpack \`wordpress-require\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "import",
    "request": "@wordpress/blob",
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "import",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`combine-assets\` > should produce expected output > Asset file 'assets.php' should match snapshot 1`] = `
"<?php return array(
	'fileA.js' => array(
		'dependencies' => array(
			'lodash',
			'wp-blob'
		),
		'version' => '09504998b440d7f5861d'
	),
	'fileB.js' => array(
		'dependencies' => array(
			'wp-token-list'
		),
		'version' => 'dc31de0b2bd54808365a'
	)
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`combine-assets\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "tokenList",
    ],
    "userRequest": "@wordpress/token-list",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-dependency-graph\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-interactivity'
	),
	'version' => '2f1a57170044bbe4b31e'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-dependency-graph\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "interactivity",
    ],
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-dynamic-dependency-graph\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-interactivity'
	),
	'version' => 'ca11d0bf855ab592ac36'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-dynamic-dependency-graph\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "interactivity",
    ],
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-external-deps\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-interactivity'
	),
	'version' => '34137dbaccc3b6e9106e'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`cyclic-external-deps\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "interactivity",
    ],
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`dynamic-import\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-blob'
	),
	'version' => 'b5b0369ff43e45de9a31'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`dynamic-import\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`error\` > should produce expected output 1`] = `
"ERROR in main
Module not found: Error: Ensure error in script build.
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`function-output-filename\` > should produce expected output > Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => 'e47c17efde0e9efa1d41'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`function-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`has-extension-suffix\` > should produce expected output > Asset file 'index.min.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => 'd4f650de95657219702b'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`has-extension-suffix\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`module-renames\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'renamed--@my/module',
		'renamed--other-module'
	),
	'version' => '556545d20d0075ed699f'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`module-renames\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "my-namespace",
      "renamed--@my/module",
    ],
    "userRequest": "@my/module",
  },
  {
    "externalType": "window",
    "request": [
      "my-namespace",
      "renamed--other-module",
    ],
    "userRequest": "other-module",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`nested-dynamic-import\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-interactivity'
	),
	'version' => '08ac1b57d8e3301bd45e'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`nested-dynamic-import\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "interactivity",
    ],
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`no-default\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => '9c20c9bd8e5f5841767b'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`no-default\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`no-deps\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => 'b922a4320dd8b7a352f4'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`no-deps\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`option-function-output-filename\` > should produce expected output > Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => 'e47c17efde0e9efa1d41'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`option-function-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`option-output-filename\` > should produce expected output > Asset file 'main-foo.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => 'e47c17efde0e9efa1d41'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`option-output-filename\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`output-format-json\` > should produce expected output > Asset file 'main.asset.json' should match snapshot 1`] = `
"{
	"dependencies": [
		"lodash"
	],
	"version": "1eb19273417cb6fc62c1"
}"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`output-format-json\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`overrides\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-blob',
		'wp-script-handle-for-rxjs',
		'wp-url'
	),
	'version' => '96b889b779d0e972229e'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`overrides\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "rxjs",
    "userRequest": "rxjs",
  },
  {
    "externalType": "window",
    "request": [
      "rxjs",
      "operators",
    ],
    "userRequest": "rxjs/operators",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "url",
    ],
    "userRequest": "@wordpress/url",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`polyfill-magic-comment\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-polyfill'
	),
	'version' => '48f720dd907eea75c1fd'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`polyfill-magic-comment\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`polyfill-magic-comment-minified\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-polyfill'
	),
	'version' => '31d6cfe0d16ae931b73c'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`polyfill-magic-comment-minified\` > should produce expected output > External modules should match snapshot 1`] = `[]`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'a.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-blob'
	),
	'version' => 'c4233136b50b85f54397',
	'handle' => 'runtime-chunk-single-scripts-a'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'b.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => '47dc3725258841aebdf0',
	'handle' => 'runtime-chunk-single-scripts-b'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`runtime-chunk-single\` > should produce expected output > Asset file 'runtime.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		
	),
	'version' => '75a75bd03c2bec2dbf4f',
	'handle' => 'runtime-chunk-single-scripts-runtime'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`runtime-chunk-single\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`style-cache-group\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'wp-blob'
	),
	'version' => '497ef38d9beef8e874bb'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`style-cache-group\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`style-imports\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => '01aed64eaec11c2d6896'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`style-imports\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => 'e47c17efde0e9efa1d41'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress-interactivity\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-interactivity'
	),
	'version' => '234896667c155befffe2'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress-interactivity\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "interactivity",
    ],
    "userRequest": "@wordpress/interactivity",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress-require\` > should produce expected output > Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array(
	'dependencies' => array(
		'lodash',
		'wp-blob'
	),
	'version' => '21cb4044c3c0bc8f09f8'
);
"
`;

exports[`DependencyExtractionWebpackPlugin scripts > Webpack \`wordpress-require\` > should produce expected output > External modules should match snapshot 1`] = `
[
  {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  {
    "externalType": "window",
    "request": [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;
